--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.12.0",
+    "chart.js": "^2.9.3",
+    "chartist": "^0.11.4",
+    "chartist-plugin-tooltips": "0.0.17",
     "core-js": "^3.6.4",
+    "v-chartist": "^0.1.6",
     "vue": "^2.6.11",
+    "vue-chartist": "^2.2.1",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
